@@ -25,14 +25,7 @@ AC_USE_SYSTEM_EXTENSIONS
 
 LT_INIT([dlopen])
 
-AC_ARG_ENABLE([plugins],
-AS_HELP_STRING([--enable-plugins], [linker plugins (defaults no)]),
-[case "${enableval}" in
-  yes | "") plugins=yes ;;
-  no) plugins=no ;;
-  *) plugins=yes ;;
- esac],
-[plugins=no])
+AC_PLUGINS
 
 AM_CONDITIONAL(PLUGINS, test "$plugins" = "yes")
 
