@@ -1,3 +1,7 @@
+2009-05-26  Rafael Avila de Espindola  <espindola@google.com>
+
+	* plugins.m4: New.
+
 2009-05-12  Alexandre Oliva  <aoliva@redhat.com>
 
 	* multi.m4: Save CXX, GFORTRAN and GCJ in config.status.
